--- a/user-web/Dockerfile
+++ b/user-web/Dockerfile
@@ -4,6 +4,8 @@ RUN sed -i 's/dl-cdn\.alpinelinux\.org/mirrors\.aliyun\.com/g' /etc/apk/reposito
 
 RUN apk update --no-cache
 
+CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go
+
 RUN mkdir /main
 COPY main /main/
 COPY config-debug.yaml /main/
